Changes in SmsReceiver, SmsApiService & MainActivity classes, Added the Preferences class for easy access to shared preferences; New resources were defined

--- a/SMSLocatorAndroid/res/layout/activity_main.xml
+++ b/SMSLocatorAndroid/res/layout/activity_main.xml
@@ -8,9 +8,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <Switch
+        android:id="@+id/switchUploadSms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/main_switch_upload" />
+
+    <EditText
+        android:id="@+id/editTextPhoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/switchUploadSms"
+        android:layout_below="@+id/switchUploadSms"
+        android:layout_marginTop="22dp"
+        android:ems="10"
+        android:inputType="phone" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/btnSetPhoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editTextPhoneNumber"
+        android:layout_alignTop="@+id/editTextPhoneNumber"
+        android:layout_toRightOf="@+id/editTextPhoneNumber"
+        android:text="Set" />
 
 </RelativeLayout>
