Major changes in layout & code structure including: Added Google Maps API v2 with the SmsMapFragment, Removed the SmsListActivity class; Created a SettingsFragment for controls with code from the MainActivity; Added layouts for fragments, changed the app's theme & added fragments to the main activity's portrait & landscape layouts

--- a/SMSLocatorAndroid/res/layout/activity_main.xml
+++ b/SMSLocatorAndroid/res/layout/activity_main.xml
@@ -1,42 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:orientation="vertical" >
 
-    <Switch
-        android:id="@+id/switchUploadSms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/main_switch_upload" />
+    <fragment
+        android:id="@+id/fragmentSmsSettings"
+        android:name="com.aa.smslocator.client.android.fragment.SettingsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-    <EditText
-        android:id="@+id/editTextPhoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/switchUploadSms"
-        android:layout_below="@+id/switchUploadSms"
-        android:layout_marginTop="22dp"
-        android:ems="10"
-        android:inputType="phone" >
+    <fragment
+        android:id="@+id/fragmentSmsList"
+        android:name="com.aa.smslocator.client.android.fragment.SmsListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-        <requestFocus />
-    </EditText>
-
-    <Button
-        android:id="@+id/btnSetPhoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editTextPhoneNumber"
-        android:layout_alignTop="@+id/editTextPhoneNumber"
-        android:layout_toRightOf="@+id/editTextPhoneNumber"
-        android:text="Set" />
-
-</RelativeLayout>
+</LinearLayout>
